--- a/source/RouteViewer/RouteViewer.csproj
+++ b/source/RouteViewer/RouteViewer.csproj
@@ -141,6 +141,10 @@
     <Compile Include="WorldR.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DevTools\LBAHeader\LBAHeader.csproj">
+      <Project>{e9b64673-65b7-4d77-a4db-4b441a7c9197}</Project>
+      <Name>LBAHeader</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OpenBveApi\OpenBveApi.csproj">
       <Project>{27134980-4415-4375-A564-40A9014DFA5F}</Project>
       <Name>OpenBveApi</Name>
@@ -148,7 +152,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-    <PropertyGroup>
+  <PropertyGroup>
     <!-- Copy in dependancies and child projects -->
     <!-- Finally, set LBA flag & cleanup -->
     <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
