--- a/source/ObjectViewer/ObjectViewer.csproj
+++ b/source/ObjectViewer/ObjectViewer.csproj
@@ -77,6 +77,12 @@
     <Compile Include="formOptions.Designer.cs">
       <DependentUpon>formOptions.cs</DependentUpon>
     </Compile>
+    <Compile Include="formTrain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formTrain.Designer.cs">
+      <DependentUpon>formTrain.cs</DependentUpon>
+    </Compile>
     <Compile Include="FunctionScripts.cs" />
     <Compile Include="Hosts.cs" />
     <Compile Include="Options.cs" />
@@ -119,6 +125,9 @@
     <EmbeddedResource Include="formOptions.resx">
       <DependentUpon>formOptions.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formTrain.resx">
+      <DependentUpon>formTrain.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
