Fix: command name

--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -647,7 +647,7 @@ SECURITY_N = N/A
 SECURITY_O = N/A
 SECURITY_P = N/A
 CAMERA_INTERIOR = Switches to the train's interior view
-CAMERA_NO_INTERIOR = Switches to the train's interior view. However, the panel is not displayed.
+CAMERA_INTERIOR_NOPANEL = Switches to the train's interior view. However, the panel is not displayed.
 CAMERA_EXTERIOR = Switches to the train's exterior view
 CAMERA_TRACK = Switches to the track view
 CAMERA_FLYBY = Switches between different fly-by views
