New: add DebugTouchMode and custom cursor

--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -695,6 +695,7 @@ DEBUG_WIREFRAME = Activates or deactivates wireframe mode
 DEBUG_NORMALS = Shows or hides vertex normals
 DEBUG_BRAKE = Shows or hides brake system debug output
 DEBUG_ATS = Shows or hides plugin debug output
+DEBUG_TOUCH_MODE = Shows or hides the touch range
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
