New: add custom cursors and Panel2 extended mode

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -477,6 +477,9 @@
     <Compile Include="Simulation\TrainManager\Train\Handles\Handles.AirBrake.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\..\assets\Cursors\nk.png" />
+  </ItemGroup>
+  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
