New: add cursor symbols

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -480,6 +480,12 @@
     <EmbeddedResource Include="..\..\assets\Cursors\nk.png" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\..\assets\Cursors\Symbols\plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\assets\Cursors\Symbols\minus.png" />
+  </ItemGroup>
+  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
