--- a/source/CarXMLConvertor/CarXMLConvertor.csproj
+++ b/source/CarXMLConvertor/CarXMLConvertor.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Convert.ExtensionsCfg.cs" />
     <Compile Include="Convert.Panel2.cs" />
+    <Compile Include="Convert.PanelAnimated.cs" />
     <Compile Include="Convert.TrainDat.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
