--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,7 @@ DEBUG_CONFIGURATION=Release
 override_dh_auto_build:
 	xbuild /p:TargetFrameworkVersion="v4.5" OpenBVE.sln /p:Configuration=$(DEBUG_CONFIGURATION)
 	rm bin_release/AtsPluginProxy.*
+	rm bin_release/Data/Formats/OpenTK.dll
 	
 override_dh_auto_clean:
 	xbuild /t:Clean OpenBVE.sln
@@ -17,7 +18,7 @@ override_dh_auto_install:
 
 
 override_dh_clideps:
-	dh_clideps -d -r --exclude-moduleref=AtsPluginProxy.dll
+	dh_clideps -d -r --exclude-moduleref=AtsPluginProxy.dll --exclude-moduleref=hid.dll --exclude-moduleref=ole32.Dll --exclude-moduleref=fusion.dll --exclude-moduleref=setupapi.dll --exclude-moduleref=msdmo.dll --exclude-moduleref=dsound.dll --exclude-moduleref=Msacm32.dll --exclude-moduleref=msacm32.dll --exclude-moduleref=ole32.dll --exclude-moduleref=mfplat.dll --exclude-moduleref=mfreadwrite.dll --exclude-moduleref=mf.dll --exclude-moduleref=/System/Library/Frameworks/IOKit.framework/Versions/Current/IOKit  --exclude-moduleref=libdl.dylib --exclude-moduleref=/usr/lib/libobjc.dylib --exclude-moduleref=/System/Library/Frameworks/OpenGL.framework/Versions/Current/OpenGL --exclude-moduleref=/System/Library/Frameworks/Carbon.framework/Versions/Current/Carbon --exclude-moduleref=/System/Library/Frameworks/ApplicationServices.framework/Versions/Current/ApplicationServices --exclude-moduleref=/System/Library/Frameworks/CoreVideo.framework/Versions/Current/CoreVideo --exclude-moduleref=libGLES.dll
 
 %:
 	dh $@ --with cli
