--- a/dependencies/OpenTK.dll.config
+++ b/dependencies/OpenTK.dll.config
@@ -9,14 +9,12 @@
   <dllmap os="linux" dll="SDL2.dll" target="libSDL2-2.0.so.0"/>
   <dllmap os="linux" dll="libXxf86vm" target="libXxf86vm.so.1"/>
   <dllmap os="linux" dll="libdrm" target="libdrm.so.2"/>
-  <dllmap os="linux" dll="gbm" target="libdgbm.so.1"/>
+  <dllmap os="linux" dll="gbm" target="libdgbm.so.3"/>
   <dllmap os="linux" dll="libudev" target="libudev.so.1"/>
-  <dllmap os="linux" dll="libinput" target="libinput.so.1"/>
-  <dllmap os="linux" dll="libkms" target="libkms.so.1"/>
+  <dllmap os="linux" dll="libinput" target="libinput.so.5"/>
+  <dllmap os="linux" dll="libkms" target="libkms.so"/>
   <dllmap os="linux" dll="dl" target="libdl.so.1"/>
-  <dllmap os="linux" dll="libEGL.dll" target="libegl.so.1"/>
-  <dllmap os="linux" dll="libGLESv2.dll" target="libGLESv2.so"/>
-  <dllmap os="linux" dll="GLESv1_CM" target="libGLESv1_CM.so.1"/>
+
   <dllmap os="linux" dll="openal32.dll" target="libopenal.so.1"/>
   <dllmap os="osx" dll="opengl32.dll" target="/System/Library/Frameworks/OpenGL.framework/OpenGL"/>
   <dllmap os="osx" dll="openal32.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
