WIP: Fix Debian package menu / icon [ci-skip]

--- a/debian/openbve.desktop
+++ b/debian/openbve.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=OpenBVE
+Name=openBVE
 GenericName=Train simulator
 GenericName[de]=Zugsimulation
 Categories=Game;Simulation;
