--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -535,6 +535,10 @@
       <Name>Formats.Msts</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\SignalManager\SignalManager.csproj">
+      <Project>{87838364-8911-46b2-8628-d437c485d9c9}</Project>
+      <Name>SignalManager</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
