--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -88,6 +88,9 @@
     <Compile Include="Objects\MeshMaterial.BlendMode.cs" />
     <Compile Include="Objects\MeshMaterial.cs" />
     <Compile Include="Objects\UnifiedObject.cs" />
+    <Compile Include="Sounds\Sounds.PathOrigin.cs" />
+    <Compile Include="Sounds\Sounds.RawOrigin.cs" />
+    <Compile Include="Sounds\Sounds.SoundOrigin.cs" />
     <Compile Include="System\FileSystem.cs" />
     <Compile Include="Graphics\InterpolationModes.cs" />
     <Compile Include="Graphics\TextAlignment.cs" />
