--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -1,6 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2018-09-26
-; by  F81_tec200, Midnight Express Ginga81(ginga81), S520, Stop_Pattern
+; by  F81_tec200, Midnight Express Ginga81(ginga81), S520, Stop_Pattern, rekuto02(Aosa)
 
 [program]
 title = openBVE
@@ -397,10 +397,10 @@ page_next = 次のページへ...
 kiosk_mode = Kiosk Mode
 kiosk_mode_enable = Enable Kiosk Mode
 kiosk_mode_timer = Control Timeout (s)
-hud_size = HUD Size
-hud_size_small = Small
-hud_size_normal = Normal
-hud_size_large = Large
+hud_size = HUDサイズ
+hud_size_small = 小さい
+hud_size_normal = 普通
+hud_size_large = 大きい
 transparencyfix = Attempt to fix transparency issues in older content.
 hacks_enable = Enable hacks for buggy older content.
 input_device_plugin = 入力デバイスプラグイン
