Change: Move StaticObject to API

--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -87,7 +87,8 @@
     <Compile Include="Objects\MeshFaceVertex.cs" />
     <Compile Include="Objects\MeshMaterial.BlendMode.cs" />
     <Compile Include="Objects\MeshMaterial.cs" />
-    <Compile Include="Objects\UnifiedObject.cs" />
+    <Compile Include="Objects\ObjectTypes\StaticObject.cs" />
+    <Compile Include="Objects\ObjectTypes\UnifiedObject.cs" />
     <Compile Include="Sounds\Sounds.PathOrigin.cs" />
     <Compile Include="Sounds\Sounds.RawOrigin.cs" />
     <Compile Include="Sounds\Sounds.SoundOrigin.cs" />
