Change: Move AnimatedObjectState to API, fix makefile

--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Objects\MeshMaterial.BlendMode.cs" />
     <Compile Include="Objects\MeshMaterial.cs" />
     <Compile Include="Objects\ObjectInterface.cs" />
+    <Compile Include="Objects\ObjectTypes\AnimatedObject.AnimatedObjectState.cs" />
     <Compile Include="Objects\ObjectTypes\StaticObject.cs" />
     <Compile Include="Objects\ObjectTypes\UnifiedObject.cs" />
     <Compile Include="Sounds\Sounds.PathOrigin.cs" />
