Change: Update ja-JP language file
Translate some options to Japanese by series223w10

--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -1,6 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2018-09-26
-; by  F81_tec200, Midnight Express Ginga81(ginga81), S520, Stop_Pattern, rekuto02(Aosa)
+; by  F81_tec200, Midnight Express Ginga81(ginga81), S520, Stop_Pattern, rekuto02(Aosa), series223w10
 
 [program]
 title = openBVE
@@ -402,7 +402,7 @@ hud_size_small = 小さい
 hud_size_normal = 普通
 hud_size_large = 大きい
 transparencyfix = Attempt to fix transparency issues in older content.
-hacks_enable = Enable hacks for buggy older content.
+hacks_enable = 路線別のトラブル修正を有効にする
 input_device_plugin = 入力デバイスプラグイン
 input_device_plugin_warning = 注意: 入力デバイスプラグインを有効化した場合、本体の入力設定と干渉することがあります。
 input_device_plugin_name = 名称
