--- a/source/SignalManager/SignalManager.csproj
+++ b/source/SignalManager/SignalManager.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{87838364-8911-46B2-8628-D437C485D9C9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SignalManager</RootNamespace>
+    <RootNamespace>OpenBve.SignalManager</RootNamespace>
     <AssemblyName>SignalManager</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -47,6 +47,7 @@
     <Compile Include="SectionAspect.cs" />
     <Compile Include="SectionTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenBveApi\OpenBveApi.csproj">
