--- a/source/ObjectViewer/ObjectViewer.csproj
+++ b/source/ObjectViewer/ObjectViewer.csproj
@@ -143,6 +143,10 @@
       <Name>Formats.Msts</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\SignalManager\SignalManager.csproj">
+      <Project>{87838364-8911-46b2-8628-d437c485d9c9}</Project>
+      <Name>SignalManager</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
