Change: Move BackgroundHandle to API, partially cross port to Route Viewer

--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Objects\ObjectTypes\WorldObject.cs" />
     <Compile Include="Objects\Parsers\ObjParsers.cs" />
     <Compile Include="Objects\Parsers\XParsers.cs" />
+    <Compile Include="Routes\Background.Handle.cs" />
+    <Compile Include="Routes\Background.TransitionModes.cs" />
     <Compile Include="Sounds\Sounds.PathOrigin.cs" />
     <Compile Include="Sounds\Sounds.RawOrigin.cs" />
     <Compile Include="Sounds\Sounds.SoundOrigin.cs" />
