--- a/source/LibRender/LibRender.csproj
+++ b/source/LibRender/LibRender.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Camera\CameraAlignment.cs" />
     <Compile Include="Camera\CameraRestrictionMode.cs" />
+    <Compile Include="Objects\RenderFace.cs" />
     <Compile Include="Overlays\Keys.cs" />
     <Compile Include="Primitives\Cube.cs" />
     <Compile Include="Primitives\Rectangle.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Lighting\LightDefinition.cs" />
     <Compile Include="Objects\ObjectFace.cs" />
     <Compile Include="Objects\ObjectListType.cs" />
+    <Compile Include="Renderer.Functions.cs" />
     <Compile Include="Screen\OutputModes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\OpenGlFont.cs" />
