Change: Move most camera properties to shared renderer

--- a/source/LibRender/LibRender.csproj
+++ b/source/LibRender/LibRender.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera\Camera.cs" />
     <Compile Include="Camera\CameraAlignment.cs" />
     <Compile Include="Camera\CameraRestrictionMode.cs" />
     <Compile Include="Lighting\Lighting.cs" />
