--- a/source/BackgroundManager/BackgroundManager.csproj
+++ b/source/BackgroundManager/BackgroundManager.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2072ECD1-C7FF-427C-84DC-063F7C19792E}</ProjectGuid>
+    <ProjectGuid>{878EB203-7005-4202-AD3C-409F65656EEC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LibRender</RootNamespace>
-    <AssemblyName>LibRender</AssemblyName>
+    <RootNamespace>OpenBve.BackgroundManager</RootNamespace>
+    <AssemblyName>BackgroundManager</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -39,7 +39,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,41 +46,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Backgrounds\Backgrounds.cs" />
-    <Compile Include="Camera\Camera.cs" />
-    <Compile Include="Camera\CameraAlignment.cs" />
-    <Compile Include="Camera\CameraRestrictionMode.cs" />
-    <Compile Include="Lighting\Lighting.cs" />
-    <Compile Include="MotionBlur\MotionBlurMode.cs" />
-    <Compile Include="Objects\ObjectListReference.cs" />
-    <Compile Include="Objects\RenderFace.cs" />
-    <Compile Include="Overlays\Keys.cs" />
-    <Compile Include="Primitives\Cube.cs" />
-    <Compile Include="Primitives\Rectangle.cs" />
-    <Compile Include="Renderer.cs" />
-    <Compile Include="Lighting\LightDefinition.cs" />
-    <Compile Include="Objects\ObjectFace.cs" />
-    <Compile Include="Objects\ObjectListType.cs" />
-    <Compile Include="Renderer.Functions.cs" />
-    <Compile Include="Screen\OutputModes.cs" />
+    <Compile Include="BackgroundManager.cs" />
+    <Compile Include="Types\BackgroundObject.cs" />
+    <Compile Include="Types\DynamicBackground.cs" />
+    <Compile Include="Types\StaticBackground.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screen\Screen.cs" />
-    <Compile Include="Textures\TextureManager.cs" />
-    <Compile Include="Text\OpenGlFont.cs" />
-    <Compile Include="Text\OpenGlFontChar.cs" />
-    <Compile Include="Text\OpenGlFontTable.cs" />
-    <Compile Include="Text\Strings.cs" />
-    <Compile Include="Viewport\ViewportChangeModes.cs" />
-    <Compile Include="Viewport\ViewportModes.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LibRender\LibRender.csproj">
+      <Project>{2072ecd1-c7ff-427c-84dc-063f7c19792e}</Project>
+      <Name>LibRender</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OpenBveApi\OpenBveApi.csproj">
       <Project>{27134980-4415-4375-a564-40a9014dfa5f}</Project>
       <Name>OpenBveApi</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="MotionBlur\MotionBlur.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
