--- a/source/RouteManager/RouteManager.csproj
+++ b/source/RouteManager/RouteManager.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OpenBve.SignalManager</RootNamespace>
-    <AssemblyName>SignalManager</AssemblyName>
+    <AssemblyName>RouteManager</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
